# ml-algorithms

./: pyproject.toml
decision-tree/: DecisionTree.py  DecisionTreeClassifier.py  train.py
k-means/: KMeans.py  main.py
knn/: KNeighborsClassifier.py  main.py
linear-regression/: LinearRegression.py  main.py
logistic-regression/: LogisticRegression.py  main.py
naive-bayes/: NaiveBayes.py  train.py
neural-net/: CrossEntropyLoss.py  DenseLayer.py  NeuralNet.py  ReLU.py  Sigmoid.py  Softmax.py  Tanh.py  main.py  train.py
pca/: pca.py  train.py
random-forest/: RandomForest.py  train.py
svm/: SVMClassifier.py  main.py
