[project]
name = "ml-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.4.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "polars>=1.32.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "xgboost>=3.0.3",
]
